# create-litestar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
create_litestar/: __main__.py  __metadata__.py  main.py
create_litestar/commands/: logging.py  object_type.py  openapi.py  orm.py  plugins.py  template.py  web_server.py
create_litestar/helpers/: cli.py  constants.py  project.py  validators.py
create_litestar/model/: project.py
create_litestar/templates/: __init__.py
create_litestar/templates/basic/: README.md.jinja  asgi.py.jinja  pyproject.toml.jinja
create_litestar/templates/basic/app/: __init__.py  __main__.py  __metadata__.py.jinja  asgi.py.jinja
create_litestar/templates/basic/app/config/: compression.py.jinja  routes.py  settings.py.jinja  {% if use_cors_csrf %}cors.py{% endif %}.jinja  {% if use_logging %}log.py{% endif %}.jinja  {% if use_openapi %}openapi.py{% endif %}.jinja  {% if use_web_server and web_server == 'granian' %}web_server.py{% endif %}.jinja
create_litestar/templates/basic/app/db/migrations/: alembic.ini  env.py  script.py.mako
create_litestar/templates/basic/app/domain/system/: controllers.py  schemas.py  urls.py
create_litestar/templates/basic/app/{% if use_test %}tests{% endif %}/: test_pass.py
create_litestar/templates/basic/config/: compression.py.jinja  routes.py  {% if use_logging %}log.py{% endif %}.jinja  {% if use_openapi %}openapi.py{% endif %}.jinja
create_litestar/templates/basic/domain/system/: controllers.py  schemas.py  urls.py
create_litestar/templates/basic/server/: plugins.py.jinja
output/: hello.py  pyproject.toml
src/: main.py
src/commands/: logging.py  orm.py  plugins.py  template.py
src/helpers/: constants.py  gitignore.py  project.py  utils.py  validators.py
src/templates/basic/: asgi.py
src/templates/basic/config/: base.py.jinja
src/templates/basic/db/migrations/: env.py
src/templates/basic/server/: plugins.py.jinja
