[project]
name = "create-litestar"
version = "0.1.0"
description = "Easy way to start a Litestar project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "copier>=9.3.1",
    "httpx>=0.27.2",
    "questionary>=2.0.1",
    "rich>=13.9.1",
]

[tool.ruff]
extend-exclude = ["src/templates/basic"]

[tool.uv]
dev-dependencies = [
    # Autocomplete
    "litestar>=2.12.1",
    "structlog>=24.4.0",
    # Linting and tests
    "mypy>=1.12.0",
    "pre-commit>=3.5.0",
    "pyright>=1.1.385",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "slotscheck>=0.16.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
