[project]
name = "create-litestar"
version = "0.1.1"
description = "Easy way to start a Litestar project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advanced-alchemy>=0.20.0",
    "copier>=9.3.1",
    "pytest>=8.3.3",
    "questionary>=2.0.1",
    "rich>=13.9.1",
    "ruff>=0.6.8",
    "structlog>=24.4.0",
    "uvicorn>=0.32.0",
]

[project.urls]
Discord = "https://discord.gg/litestar"
Funding = "https://github.com/sponsors/litestar-org"
Homepage = "https://github.com/Kumzy/create-litestar"
Issue = "https://github.com/Kumzy/create-litestar/issues/"
Source = "https://github.com/Kumzy/create-litestar"

[project.scripts]
create-litestar = "create_litestar.__main__:main"

[tool.ruff]
extend-exclude = ["src/templates/basic"]

[tool.uv]
dev-dependencies = [
    # Autocomplete
    "litestar>=2.12.1",
    "structlog>=24.4.0",
    # Linting and tests
    "mypy>=1.12.0",
    "pre-commit>=3.5.0",
    "pyright>=1.1.385",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "slotscheck>=0.16.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
